default/objects/Relationship_Map_Member__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Relationship Map Members</relationshipLabel>
    <relationshipName>Relationship_Map_Members</relationshipName>
    <type>Lookup</type>
</CustomField>