default/objects/Relationship_Map_Member__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Relationship Map Members</relationshipLabel>
    <relationshipName>Hierarchy_Member</relationshipName>
    <type>Lookup</type>
</CustomField>