default/objects/Relationship_Map_Member__c/fields/Original_Key_Stakeholder__c.field-meta.xml
<CustomField>
    <fullName>Original_Key_Stakeholder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Original Key Stakeholder</label>
    <referenceTo>Key_Stakeholder__c</referenceTo>
    <relationshipLabel>Relationship Map Members</relationshipLabel>
    <relationshipName>Relationship_Map_Members</relationshipName>
    <type>Lookup</type>
</CustomField>