default/objects/Relationship_Map_Member__c/fields/Reports_To__c.field-meta.xml
<CustomField>
    <fullName>Reports_To__c</fullName>
    <formula>HYPERLINK(&quot;/&quot; &amp; Contact__r.ReportsToId, Contact__r.ReportsTo.FirstName + &quot; &quot; + Contact__r.ReportsTo.LastName)</formula>
    <label>Reports To</label>
    <type>Text</type>
</CustomField>