default/objects/Relationship_Map_Member__c/fields/SupportId__c.field-meta.xml
<CustomField>
    <fullName>SupportId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This support value is local to the map.  it is used when the chart setting &quot;Use Global Influence and Support Values.&quot; is unchecked.</description>
    <inlineHelpText>This support value is local to the map.  it is used when the chart setting &quot;Use Global Influence and Support Values.&quot; is unchecked.</inlineHelpText>
    <label>Local Support</label>
    <referenceTo>pq_Support__c</referenceTo>
    <relationshipLabel>Relationship Map Members</relationshipLabel>
    <relationshipName>Relationship_Map_Members</relationshipName>
    <type>Lookup</type>
</CustomField>